--- a/static/css/public.css
+++ b/static/css/public.css
@@ -50,6 +50,10 @@ a:focus { -moz-outline-style: none; outline: none; }
 .songti { font-family: 'Arial'; }
 .fl { float: left; }
 .fr { float: right; }
+.tc { text-align: center; }
+.f13{font-size: 13px!important;}
+.f14{font-size: 14px!important;}
+.f15{font-size: 15px!important;}
 .f16{font-size: 16px!important;}
 .nmr{margin-right: 0!important;}
 .nml{margin-left: 0!important;}
